# blogrs

./: Cargo.toml  README.md  Rocket.toml
resource/: script.js  style.css
src/: main.rs
templates/: blog.html.hbs  browse.html.hbs  index.html.hbs
